--- a/styles/style.css
+++ b/styles/style.css
@@ -1,480 +1,575 @@
 body {
-    padding: 10px
+	padding: 10px
 }
 
 #square {
-    width: 120px;
-    height: 120px;
-    background: #99699c;
-    border: 5px solid black;
+	width: 120px;
+	height: 120px;
+	background: #99699c;
+	border: 5px solid black;
 }
 
 #circle {
-    width: 120px;
-    height: 120px;
-    background: rgb(83, 124, 46);
-    border: double 10px rgba(202, 209, 8, 0.827);
-    border-radius: 50%;
-    /* outline: 5px solid red;
+	width: 120px;
+	height: 120px;
+	background: rgb(83, 124, 46);
+	border: double 10px rgba(202, 209, 8, 0.827);
+	border-radius: 50%;
+	/* outline: 5px solid red;
     outline-offset: 5px; */
 }
 
 .rounded {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-    font-size: 14px;
-    border-radius: 10px;
-    border-spacing: 0;
-    text-align: center;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 14px;
+	border-radius: 10px;
+	border-spacing: 0;
+	text-align: center;
 }
 
 .rounded th {
-    background: #2325b6;
-    color: white;
-    text-shadow: 0 1px 1px #2D2020;
-    padding: 10px 20px;
+	background: #2325b6;
+	color: white;
+	text-shadow: 0 1px 1px #2D2020;
+	padding: 10px 20px;
 }
 
 .rounded th,
 .rounded td {
-    border-style: solid;
-    border-width: 0 1px 1px 0;
-    border-color: white;
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: white;
 }
 
 .rounded th:first-child,
 .rounded td:first-child {
-    text-align: left;
+	text-align: left;
 }
 
 .rounded th:first-child {
-    border-top-left-radius: 10px;
+	border-top-left-radius: 10px;
 }
 
 .rounded th:last-child {
-    border-top-right-radius: 10px;
-    border-right: none;
+	border-top-right-radius: 10px;
+	border-right: none;
 }
 
 .rounded td {
-    padding: 10px 20px;
-    background: #F8E391;
+	padding: 10px 20px;
+	background: #F8E391;
 }
 
 .rounded tr:last-child td:first-child {
-    border-radius: 0 0 0 10px;
+	border-radius: 0 0 0 10px;
 }
 
 .rounded tr:last-child td:last-child {
-    border-radius: 0 0 10px 0;
+	border-radius: 0 0 10px 0;
 }
 
 .rounded tr td:last-child {
-    border-right: none
+	border-right: none
 }
 
 sub {
-    color: blue;
+	color: blue;
 }
 
 sup {
-    color: crimson;
+	color: crimson;
 }
 
 .link {
-    font-style: italic;
-    font-weight: bold;
-    font-size: 20px;
-    background-color: rgb(76, 15, 15);
-    padding: 10px 0 10px 10px;
+	font-style: italic;
+	font-weight: bold;
+	font-size: 20px;
+	background-color: rgb(76, 15, 15);
+	padding: 10px 0 10px 10px;
 }
 
 .link :first-child {
-    color: rgb(214, 43, 43);
+	color: rgb(214, 43, 43);
 }
 
 .link :nth-child(2) {
-    color: rgb(153, 203, 45);
+	color: rgb(153, 203, 45);
 }
 
 .link :last-child {
-    color: rgb(151, 220, 238);
+	color: rgb(151, 220, 238);
 }
 
 .link a {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 .diagramma {
-    position: relative;
-    height: 100px;
-    width: 100px;
-    background: #ecf5e4;
-    border: 25px solid #95cd8b;
-    border-right: 25px solid #d0e6bb;
-    border-radius: 50%;
+	position: relative;
+	height: 100px;
+	width: 100px;
+	background: #ecf5e4;
+	border: 25px solid #95cd8b;
+	border-right: 25px solid #d0e6bb;
+	border-radius: 50%;
 }
 
-p {
-    position: absolute;
-    font-size: 40px;
-    margin: 0;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+.diag-text {
+	position: absolute;
+	font-size: 40px;
+	margin: 0;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
 }
 
 span {
-    font-size: 25px
+	font-size: 25px
 }
 
 ul {
-    display: block;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+	display: block;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 ul:after {
-    display: block;
-    content: ' ';
-    clear: both;
-    float: none;
+	display: block;
+	content: ' ';
+	clear: both;
+	float: none;
 }
 
 ul {
-    display: flex;
-    padding-left: 0;
-    list-style: none;
+	display: flex;
+	padding-left: 0;
+	list-style: none;
 }
 
 .top-menu {
-    width: 960px;
-    margin: 0 auto;
-    display: block;
+	width: 960px;
+	margin: 0 auto;
+	display: block;
 }
 
 .top-menu:before {
-    content: '';
-    display: block;
-    height: 50px;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    z-index: -1;
+	content: '';
+	display: block;
+	height: 50px;
+	width: 100%;
+	position: absolute;
+	left: 0;
+	z-index: -1;
 }
 
 .menu-main {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    height: 50px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	height: 50px;
 }
 
 .menu-main li {
-    float: left;
-    margin-right: 10px;
+	float: left;
+	margin-right: 10px;
 }
 
 .menu-main li a {
-    background-color: rgb(207, 202, 198);
-    display: block;
-    height: 50px;
-    padding: 0 30px;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height: 50px;
-    border: 0.5px solid olivedrab;
-    border-radius: 9px;
+	background-color: rgb(207, 202, 198);
+	display: block;
+	height: 50px;
+	padding: 0 30px;
+	text-transform: uppercase;
+	text-decoration: none;
+	line-height: 50px;
+	border: 0.5px solid olivedrab;
+	border-radius: 9px;
 }
 
 .menu ul {
-    list-style: none;
+	list-style: none;
 }
 
 .flag {
-    height: 200px;
-    width: 300px;
-    display: grid;
-    grid-template-rows: auto auto auto;
-    border: solid 1px #000000;
+	height: 200px;
+	width: 300px;
+	display: grid;
+	grid-template-rows: auto auto auto;
+	border: solid 1px #000000;
 }
 
 .white {
-    background-color: #ffffff;
+	background-color: #ffffff;
 }
 
 .blue {
-    background-color: #0000ff;
+	background-color: #0000ff;
 }
 
 .red {
-    background-color: #ff0000;
+	background-color: #ff0000;
 }
 
 .japan-flag {
-    position: relative;
-    height: 400px;
-    width: 600px;
-    border: solid 1px #000000;
+	position: relative;
+	height: 400px;
+	width: 600px;
+	border: solid 1px #000000;
 }
 
 .japan-flag::after {
-    position: absolute;
-    top: 80px;
-    left: 180px;
-    display: block;
-    content: "";
-    height: 240px;
-    width: 240px;
-    background-color: #b60d1b;
-    border-radius: 50%;
+	position: absolute;
+	top: 80px;
+	left: 180px;
+	display: block;
+	content: "";
+	height: 240px;
+	width: 240px;
+	background-color: #b60d1b;
+	border-radius: 50%;
 }
 
 .button3 {
-    background: #dce0e7;
-    color: rgb(0, 0, 0);
-    padding: 12px;
-    border-radius: 10px;
-    text-decoration: none;
-    box-shadow: 0px 0px 3px 3px inset rgb(124, 122, 122);
-    border: 1px solid black;
+	background: #dce0e7;
+	color: rgb(0, 0, 0);
+	padding: 12px;
+	border-radius: 10px;
+	text-decoration: none;
+	box-shadow: 0px 0px 3px 3px inset rgb(124, 122, 122);
+	border: 1px solid black;
 }
 
 .button-3 {
-    margin: 24px;
-    font-size: 20px;
+	margin: 24px;
+	font-size: 20px;
 }
 
-.registration {
-    max-width: 400px;
-    background-color: rgb(222, 229, 243);
-    border: 2px solid rgb(170, 170, 205);
-    border-radius: 5px;
+.reg-form {
+	width: 500px;
+	height: 500px;
+	background-color: rgb(236, 236, 236);
+	border-radius: 3px;
+	border: 1px solid rgb(168, 168, 168);
 }
 
-.registration label {
-    display: block;
-    padding: 10px 0;
+.form-wrap {
+	color: rgb(82, 82, 82);
 }
 
-.registration h1 {
-    padding-bottom: 10px;
-    margin: 15px;
-    border-bottom: 2px solid rgb(170, 170, 205);
+.form-wrap h2 {
+	border-bottom: 1px solid rgb(168, 168, 168);
+	margin: 15px 10px 30px;
+	padding-bottom: 10px;
+	color: rgb(56, 56, 56);
+}
+
+.form-wrap input {
+	border: 1px solid rgb(168, 168, 168);
+
+}
+
+.req {
+	margin-left: 15px;
+}
+
+.field {
+	margin-top: 30px;
+	margin-left: 15px;
+	font-weight: 600;
+}
+
+.fw1 {
+	margin-left: 112px;
+	width: 230px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 22px;
+	margin-top: 25px;
+}
+
+.fw2 {
+	margin-left: 98px;
+	width: 244px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 22px;
+}
+
+.fw3 {
+	margin-left: 90px;
+	width: 252px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 22px;
+}
+
+.fw4 {
+	margin-left: 42px;
+	width: 300px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 20px;
+}
+
+.fw5 {
+	margin-left: 18px;
+	width: 325px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 10px;
+}
+
+.mail {
+	text-align: right;
+}
+
+.fw6 {
+	margin-left: 10px;
+	width: 333px;
+	justify-content: space-between;
+	align-items: center;
+	display: flex;
+	margin-bottom: 30px;
+}
+
+.block-button {
+	margin-left: 165px;
+}
+
+.button-one {
+	padding: 5px 10px;
+	background-color: rgb(113, 145, 243);
+	color: white;
+	border-radius: 5px;
+	border: none;
+}
+
+.button-two {
+	padding: 5px 10px;
+	background-color: #fff;
+	border-radius: 5px;
+	border: none;
+
 }
 
 .button-1 {
-    background-color: rgb(135, 186, 238);
-    color: cornsilk;
+	background-color: rgb(135, 186, 238);
+	color: cornsilk;
 }
 
 .button-2 {
-    background-color: rgb(222, 229, 243);
+	background-color: rgb(222, 229, 243);
 }
 
 .button-1,
 .button-2 {
-    border-radius: 5px;
-    padding: 8px;
+	border-radius: 5px;
+	padding: 8px;
 }
 
 .menu--0 {
-    width: 50px;
-    height: auto;
-    display: inline-block;
-    margin: 50px 50px;
-    position: relative;
+	width: 50px;
+	height: auto;
+	display: inline-block;
+	margin: 50px 50px;
+	position: relative;
 }
 
 .menu--0 a {
-    color: blue;
-    text-decoration: none;
+	color: blue;
+	text-decoration: none;
 }
 
 .ul-file {
-    z-index: 10;
-    background-color: white;
+	z-index: 10;
+	background-color: white;
 }
 
 .menu--0 .li-file .ul-file a {
-    display: block;
-    /* margin: 0; */
-    line-height: 1.5em;
-    padding: 0 3px;
+	display: block;
+	/* margin: 0; */
+	line-height: 1.5em;
+	padding: 0 3px;
 }
 
 .menu--0 a:hover {
-    background: -webkit-linear-gradient(bottom, #00d6f3bd, #00d6f3, #00d6f3bd);
-    cursor: pointer;
-    color: #fff;
-    border-radius: 3px;
+	background: -webkit-linear-gradient(bottom, #00d6f3bd, #00d6f3, #00d6f3bd);
+	cursor: pointer;
+	color: #fff;
+	border-radius: 3px;
 }
 
 .menu--0 .list li ul {
-    width: 100px;
-    height: auto;
-    box-shadow: 0 0 2px 0 #000;
-    padding: 5px;
-    position: absolute;
-    left: -8px;
-    display: none;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+	width: 100px;
+	height: auto;
+	box-shadow: 0 0 2px 0 #000;
+	padding: 5px;
+	position: absolute;
+	left: -8px;
+	display: none;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 
 .menu--0 ul li .ul-file:before {
-    content: 'Файл';
-    width: 40px;
+	content: 'Файл';
+	width: 40px;
 }
 
 .menu--0 ul li .ul-file:after {
-    width: 60px;
+	width: 60px;
 }
 
 .menu--0 ul li .ul-file:before {
-    height: 18px;
-    padding: 0 8px;
-    background-color: #fff;
-    position: absolute;
-    top: -17.92px;
-    left: 0;
-    box-shadow: 0 0 2px 0 #000;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+	height: 18px;
+	padding: 0 8px;
+	background-color: #fff;
+	position: absolute;
+	top: -17.92px;
+	left: 0;
+	box-shadow: 0 0 2px 0 #000;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 
 .menu--0 ul li .ul-file:after {
-    content: '';
-    height: 5px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #fff;
+	content: '';
+	height: 5px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #fff;
 }
 
 .menu--0 ul li:hover ul {
-    display: block;
+	display: block;
 }
 
 .block {
-    position: relative;
-    width: 400px;
+	position: relative;
+	width: 400px;
 }
 
 .block:before {
-    content: "";
-    position: absolute;
-    top: 3px;
-    left: 3px;
-    bottom: 3px;
-    right: 3px;
-    background-color: #fff;
-    z-index: 1;
-    border-radius: 4px;
+	content: "";
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	bottom: 3px;
+	right: 3px;
+	background-color: #fff;
+	z-index: 1;
+	border-radius: 4px;
 }
 
 .block:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(45deg, #1b3640, #95ecd8, #FFDC18, #FF3706);
-    z-index: -1;
-    border-radius: 4px;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: linear-gradient(45deg, #1b3640, #95ecd8, #FFDC18, #FF3706);
+	z-index: -1;
+	border-radius: 4px;
 }
 
 .block-content {
-    z-index: 999;
-    position: relative;
-    padding: 10px 30px;
-    font-size: 16px;
+	z-index: 999;
+	position: relative;
+	padding: 10px 30px;
+	font-size: 16px;
 }
 
 .vertical-menu {
-    margin-top: 20px;
-    box-shadow: 4px 4px 8px 4px rgb(124, 122, 122);
-    border: 1px solid black;
+	margin-top: 20px;
+	box-shadow: 4px 4px 8px 4px rgb(124, 122, 122);
+	border: 1px solid black;
 }
 
 .vertical-menu a {
-    text-decoration: none;
-    color: black;
+	text-decoration: none;
+	color: black;
 }
 
 .vertical-menu ul {
-    display: inline-block;
-    margin: 10px;
+	display: inline-block;
+	margin: 10px;
 }
 
 .vertical-menu li {
-    padding: 10px;
+	padding: 10px;
 }
 
 .menu-4 {
-    margin-top: 20px;
-    background: linear-gradient(to bottom, white, rgb(123, 142, 60));
-    size: 50px;
-    width: 400px;
-    -webkit-border-top-right-radius: 150px;
-    -webkit-border-bottom-right-radius: 150px;
-    -moz-border-radius-topright: 150px;
-    -moz-border-radius-bottomright: 150px;
-    border-top-right-radius: 150px;
-    border-bottom-right-radius: 150px;
+	margin-top: 20px;
+	background: linear-gradient(to bottom, white, rgb(123, 142, 60));
+	size: 50px;
+	width: 400px;
+	-webkit-border-top-right-radius: 150px;
+	-webkit-border-bottom-right-radius: 150px;
+	-moz-border-radius-topright: 150px;
+	-moz-border-radius-bottomright: 150px;
+	border-top-right-radius: 150px;
+	border-bottom-right-radius: 150px;
 }
 
 .menu-4 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .menu-4 li {
-    padding: 10px;
-    border-right: 1px solid rgb(255, 255, 255);
-    border-radius: 50%;
-    -webkit-box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
-    -moz-box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
-    box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
+	padding: 10px;
+	border-right: 1px solid rgb(255, 255, 255);
+	border-radius: 50%;
+	-webkit-box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
+	-moz-box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
+	box-shadow: 5px 1.5px 2px -2px rgba(34, 60, 80, 1);
 }
 
 .menu-5 {
-    width: 200px;
-    height: 40px;
-    background-color: #99699c;
-    margin-top: 25px;
+	width: 200px;
+	height: 40px;
+	background-color: #99699c;
+	margin-top: 25px;
 }
 
 .menu-5 li {
-    width: 15px;
-    height: 15px;
-    background-color: black;
-    border-radius: 50%;
-    border: 2px solid white;
+	width: 15px;
+	height: 15px;
+	background-color: black;
+	border-radius: 50%;
+	border: 2px solid white;
 }
 
 .menu-5 a {
-    margin: 10px;
-    width: 15px;
-    height: 15px;
-    display: block;
+	margin: 10px;
+	width: 15px;
+	height: 15px;
+	display: block;
 }
 
 .menu-5 li:hover {
-    background-color: red;
-    -webkit-box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
-    -moz-box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
-    box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
+	background-color: red;
+	-webkit-box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
+	-moz-box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
+	box-shadow: 0px 0px 14px 10px rgba(255, 255, 255, 1);
 }
 
 .link-button {
-    margin-top: 20px;
-    display: inline-block;
-    background: #353d44;
-    color: #fff;
-    padding: 5px 8px;
-    text-decoration: none;
-    border-radius: 4px;
+	margin-top: 20px;
+	display: inline-block;
+	background: #353d44;
+	color: #fff;
+	padding: 5px 8px;
+	text-decoration: none;
+	border-radius: 4px;
 }
